UI: fix mobile caravan gap by reversing positive margin to negative

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -225,6 +225,6 @@
     }
 
     .caravan-img:last-child {
-        margin-left: 150px;
+        margin-left: -100px;
     }
 }
